# mittleff

./: .gitignore  .gitignore_  .gitignore_0  .gitlab-ci.yml  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.status  configure  configure.ac  env.in  hello.scm  libtool  mittleff.scm  pyffi.scm  pyproject.toml  test-pyffi.scm
.github/workflows/: guile3.0.yml
autom4te.cache/: output.0  output.2  output.3  requests  traces.2  traces.4
build-aux/: test-driver.scm
examples/: http-server.scm  matplotlib.scm  numpy.scm  repl.scm  request.scm
hello/: Makefile.am  info.scm.in  say.scm
lib/: Makefile.am
libpyffi/: Makefile.am  pyffi.c
mittleff/: Makefile  Makefile.am  Makefile.in  __init__.py  __main__.py  algorithm.scm  erfc.scm  mittleff.scm  partition.scm  quad.scm  rgamma.scm  sf.scm
mittleff/algorithm/: __init__.py  integrate.py  series.py
mittleff/matlab/: __init__.py
mittleff/matlab/garrapa/: license.txt
mittleff/matlab/seybold/: G1.m  G2.m  G3.m  Gamma.m  IntegrateK.m  IntegrateK_contour.m  IntegrateP.m  IntegrateP_contour.m  K.m  K1.m  K_contour.m  ML2.m  MittagLeffler.m  P.m  Taylor.m  z-grid.asc
mittleff/num/: __init__.py
mittleff/partition/: __init__.py
mittleff/testing/: __init__.py
pyffi/: Makefile.am  eval.scm  import.scm  init.scm  interface.in.scm  pyobject.scm  wrapper.scm
src/: ml_erfc.c  quad.c
tests/: Makefile  Makefile.in  runner.scm  tcase.scm  test-mittleff.scm  test-recursion.scm  test_00_partition.py  test_01_algorithm.py  test_02_mittleff.py  test_AsymptoticG1.py  test_Taylor.py  test_algorithm.py  test_algorithm_G0.py  test_algorithm_G1.py  test_algorithm_G2.py  test_cos.py  test_cosh.py  test_erfc.py  test_exp.py  test_misc.py  test_partition.py  test_recursive.py  test_siam_table.py  test_sin.py  test_sinh.py  update_test_02.py
tests/tcases/algorithm/: tt_algorithm_c0002.txt
tests/tcases/mittleff/: tt_mittleff_c0003.txt  tt_mittleff_c0006.txt  tt_mittleff_c0007.txt  tt_mittleff_c0054.txt  tt_mittleff_c0057.txt  tt_mittleff_c0058.txt  tt_mittleff_c0059.txt  tt_mittleff_c0061.txt  tt_mittleff_c0062.txt  tt_mittleff_c0064.txt  tt_mittleff_c0068.txt  tt_mittleff_c0069.txt  tt_mittleff_c0073.txt  tt_mittleff_c0077.txt  tt_mittleff_c0079.txt
tests/tcases/partition/: tt_partition_c0001.txt  tt_partition_c0003.txt  tt_partition_c0006.txt  tt_partition_c0009.txt  tt_partition_c0010.txt  tt_partition_c0012.txt
tests/tcases/recursion/: tt_mittleff_c0010.txt  tt_mittleff_c0011.txt  tt_mittleff_c0016.txt  tt_mittleff_c0022.txt  tt_mittleff_c0024.txt  tt_mittleff_c0025.txt  tt_mittleff_c0027.txt  tt_mittleff_c0028.txt  tt_mittleff_c0029.txt  tt_mittleff_c0030.txt  tt_mittleff_c0034.txt  tt_mittleff_c0036.txt  tt_mittleff_c0041.txt  tt_mittleff_c0045.txt  tt_mittleff_c0046.txt  tt_mittleff_c0047.txt  tt_mittleff_c0048.txt  tt_mittleff_c0050.txt  tt_mittleff_c0055.txt  tt_mittleff_c0060.txt  tt_mittleff_c0065.txt  tt_mittleff_c0070.txt
tmp/: Makefile.am  Makefile.in_  Makefile_  bootstrap_  config.log_  config.status_  configure.ac_  configure~_  env.in_  env_  mittleff.scm
tmp/autom4te.cache/: output.1  output.2  traces.5
tmp/autom4te.cache_/: requests  traces.0  traces.1  traces.2
tmp/lib/: Makefile.in  sf.c
tmp/lib_/: Makefile
tmp/mittleff/: Makefile  Makefile.am  algorithm.scm  mittleff.scm  sf.scm
tmp/mittleff_/: Makefile.in  constants.scm
tmp/tests/: Makefile.am  runner.scm  test-hello.scm
ttt/: Makefile
ttt/mittleff/: macros.scm
ttt/src/: acbtocmplx.c  arbtod.c  ml_rgamma.c
ttt/tests/: test-algorithm.scm  test-approx.scm  test-partition.scm
ttt/tests/tcases/algorithm/: tt_algorithm_c0001.txt
ttt/tests/tcases/mittleff/: tt_mittleff_c0001.txt  tt_mittleff_c0002.txt  tt_mittleff_c0005.txt  tt_mittleff_c0012.txt  tt_mittleff_c0013.txt  tt_mittleff_c0014.txt  tt_mittleff_c0015.txt  tt_mittleff_c0051.txt  tt_mittleff_c0052.txt  tt_mittleff_c0053.txt  tt_mittleff_c0056.txt  tt_mittleff_c0063.txt  tt_mittleff_c0066.txt  tt_mittleff_c0072.txt  tt_mittleff_c0074.txt  tt_mittleff_c0076.txt  tt_mittleff_c0078.txt
ttt/tests/tcases/partition/: tt_partition_c0002.txt  tt_partition_c0004.txt  tt_partition_c0005.txt  tt_partition_c0007.txt  tt_partition_c0008.txt  tt_partition_c0011.txt
ttt/tests/tcases/recursion/: tt_mittleff_c0009.txt  tt_mittleff_c0017.txt  tt_mittleff_c0018.txt  tt_mittleff_c0019.txt  tt_mittleff_c0021.txt  tt_mittleff_c0023.txt  tt_mittleff_c0026.txt  tt_mittleff_c0031.txt  (+13 more)
