[tool.poetry]
name = "mittleff"
version = "0.1.0"
description = "Computing the generalized Mittag-Leffler function"
authors = ["Victor Santos <victor_santos@fisica.ufc.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
python-flint = "^0.6.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "CRITICAL"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
python_files = ["tests/test_*.py"]
